[package]
name = "tsc-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["cargo"] }
colored = "2.0.4"
etherparse = "0.13.0"
pcap-file = "2.0.0"
